# mschol-mirror

./: CMakeLists.txt  README.md
cmake/: FindSuiteSparse.cmake
examples/: CMakeLists.txt  solve_problem_3d.cc
makefiles/: run_cholmod_comp.sh  run_table_1.sh
src/: CMakeLists.txt  ichol.h  pcg.h  types.h
